# 02_linux_driver_repository-

./: .gitignore  .vscode-ctags  CMakeLists.txt  Makefile
app/: add.h  main_app.c
driver/: CMakeLists.txt  a.c  add.h  b.c  hello_drv.c
src/: .drv.ko.cmd  .drv.mod.o.cmd  .drv.o.cmd  Makefile  device_fuc_drv.c  driver_func_drv.c  drv.c  drv_define.h  drv_test_app.c  hello_drv.c  main_drv.c
src/.tmp_versions/: drv.mod
